feat: add filtering in assets api (#100)
* feat: add sort filters in assets api

* feat: add types and servcie filters

* feat: update types filter

* refactor: update type filtering

* fix: asset filtering test

* chore: add query filters

* fix: handlers test

* test: add test for query filters

* chore: update data filter

* feat: filter assets using its data fields

* test: update the filters test

* refactor: update filter query params

* refactor: update data filters query params format

* refactor: update unessential changes

* chore: update swagger

* refactor: update required filter changes

* refactor: update fixture

* refactor: update filter query param format

* refactor: update v1beta1 asset config format

* refactor: update data query format

* refactor: update swagger

* revert: update coverage file format

* refactor: update empty data filter check approach
